[package]
name = "tomu"
version = "0.1.0"
authors = [ "Nurahmadie <nurahmadie@gmail.com>" ]
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
tomu-macros = { path = "macros", optional = true }
embedded-hal = "0.2.2"
cast = { version = "0.2.2", default-features = false }

[dependencies.efm32]
git = "https://github.com/em32-rs/efm32hg-pac"
package = "efm32hg-pac"
features = [ "rt" ]

[dependencies.efm32-hal]
git = "https://github.com/fudanchii/efm32hg-hal"
package = "efm32hg-hal"
features = [ "chip-efm32hg" ]

# We don't have direct dependencies to this,
# but will need this to build examples
[dev-dependencies]
cortex-m-rt = "0.6.11"
panic-halt = "0.2.0"
tomu-macros = { path = "macros" }

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
compiletest_rs = "0.3.17"

[features]
toboot-custom-config = [ "tomu-macros" ]
unproven = [ "embedded-hal/unproven", "efm32-hal/unproven" ]

[[example]]
name = "toggle_blink"
required-features = [ "unproven" ]

[[example]]
name = "pac_rtc_interrupt"
required-features = [ "unproven" ]
