[package]
name = "efm32hg309f64"
version = "0.1.0"
authors = ["Nurahmadie <nurahmadie@gmail.com>"]
description = "SVD2Rust generated board support package for EFM32 Happy Gecko, specifically for efm32hg309f64 ARMv6-M Cortex-M0 MCU."
license = "MIT"

[dependencies]
bare-metal = "0.2.3"
cortex-m = "0.5.7"
vcell = "*"
cortex-m-rt = { optional = true, version = "0.6.5" }

[features]
rt = ["cortex-m-rt/device"]
