[package]
name = "tomu-macros"
version = "0.1.0"
authors = ["Nurahmadie <nurahmadie@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.11"
proc-macro2 = "0.4.26"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "0.15.26"

[dev-dependencies]
tomu = { path = ".." }
