[package]
name = "sandbox"
version = "0.1.0"
authors = ["Nurahmadie <nurahmadie@gmail.com>"]

[dependencies]
efm32hg309f64 = { path = "../efm32hg309f64", features = ["rt"] }
tomu-hal = { path = "../hal", features = ["toboot-custom-config"] }
panic-halt = "*"
cortex-m-rt = "*"
embedded-hal = { version = "*", features = ["unproven"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
